test/error/DynamicArrayLeakReturn.fu
public static class Test
{
	static int[] Create() => new int[4]; //ERROR: Dynamically allocated array must be assigned to a 'int[]#' reference

	public static bool Run()
	{
		return true;
	}
}
